# MyToDo_APP

./: # 个人待办事项应用 - 完整需求文档.md  .gitignore  README.md  package-lock.json  package.json  项目开发进度.md
.claude/: settings.local.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  SimpleApp.vue  TestApp.vue  main-simple.ts  main-test.ts
frontend/src/components/: Navigation.vue  SearchFilter.vue  Settings.vue  TaskCard.vue  TaskForm.vue  ThemeToggle.vue
frontend/src/composables/: useNotifications.ts  useTheme.ts
frontend/src/types/: task.ts
frontend/src/utils/: taskAPI.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  database.rs  lib.rs  models.rs
