[package]
name = "mytodo-app"
version = "0.1.0"
description = "MyTodo - 个人待办事项管理应用"
authors = ["MyTodo Team"]
license = "MIT"
repository = "https://github.com/mytodo/mytodo"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
# 数据库相关依赖
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
# 加密相关依赖（暂时注释，稍后添加）
# aes-gcm = "0.10"
# rand = "0.8"
# 路径处理
dirs = "5.0"
